Crazy amounts of iterations with GPT5

--- a/A3_FHOA_Heuristics/agents/fhoa/fhoa-a24-present-model-for-analysis/index.html
+++ b/A3_FHOA_Heuristics/agents/fhoa/fhoa-a24-present-model-for-analysis/index.html
@@ -7,82 +7,71 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Top metadata & controls -->
-  <header class="topbar">
-    <div class="left">
-      <div class="field">
-        <label>Author</label>
-        <input id="author" placeholder="Your name" />
+  <div id="app-root">
+    <!-- Top metadata & controls -->
+    <header class="topbar">
+      <div class="left">
+        <div class="field">
+          <label>AUTHOR</label>
+          <input id="author" placeholder="Your name" />
+        </div>
+        <div class="field">
+          <label>DATE</label>
+          <input id="date" />
+        </div>
       </div>
-      <div class="field">
-        <label>Date</label>
-        <input id="date" />
+      <div class="right">
+        <div class="field">
+          <label>MODEL</label>
+          <select id="modelSelect"></select>
+        </div>
+        <div class="field">
+          <label>ROUTER</label>
+          <select id="routerSelect">
+            <option value="ortho">Orthogonal</option>
+            <option value="curvy">Curvy (non-FIPS)</option>
+          </select>
+        </div>
+        <div class="buttons">
+          <button id="btnAddBox">+ Function</button>
+          <button id="btnOffPage">+ Off-page</button>
+          <button id="btnExportJson">Export JSON</button>
+          <button id="btnExportSvg">Export SVG</button>
+          <button id="btnSave">Save</button>
+          <button id="btnLoad">Load</button>
+          <button id="btnClear">Clear</button>
+        </div>
       </div>
-      <div class="field">
-        <label>Project</label>
-        <input id="project" placeholder="Project name" />
-      </div>
-      <div class="field">
-        <label>Status</label>
-        <select id="status">
-          <option>WORKING</option>
-          <option>DRAFT</option>
-          <option>REC.</option>
-          <option>PUB.</option>
-        </select>
-      </div>
-    </div>
-    <div class="right">
-      <div class="field">
-        <label>Model</label>
-        <select id="modelSelect"></select>
-      </div>
-      <div class="field">
-        <label>Router</label>
-        <select id="routerSelect">
-          <option value="ortho">Orthogonal</option>
-          <option value="curvy">Curvy (non-FIPS)</option>
-        </select>
-      </div>
-      <div class="buttons">
-        <button id="btnAddBox">+ Function</button>
-        <button id="btnOffPage">+ Off-page</button>
-        <button id="btnExportJson">Export JSON</button>
-        <button id="btnExportSvg">Export SVG</button>
-        <button id="btnSave">Save</button>
-        <button id="btnLoad">Load</button>
-        <button id="btnClear">Clear</button>
-      </div>
-    </div>
-  </header>
+    </header>
 
-  <!-- Canvas -->
-  <main class="canvas-wrap">
-    <div class="grid"></div>
-    <svg id="svg" class="canvas" xmlns="http://www.w3.org/2000/svg"></svg>
-  </main>
+    <!-- Canvas -->
+    <main class="canvas-wrap">
+      <div class="grid"></div>
+      <svg id="svg" class="canvas" xmlns="http://www.w3.org/2000/svg"></svg>
+    </main>
 
-  <!-- Bottom identification fields -->
-  <footer class="bottombar">
-    <div class="field"><label>Used At</label><input id="usedAt"/></div>
-    <div class="field node"><label>Node</label><input id="node" placeholder="A0 / A1 / A12 ..."/></div>
-    <div class="field title"><label>Title</label><input id="title" placeholder="Diagram title"/></div>
-    <div class="field number">
-      <div class="sub">
-        <label>C-Number</label><input id="cnum" />
+    <!-- Bottom identification fields -->
+    <footer class="bottombar">
+      <div class="field"><label>USED AT</label><input id="usedAt"/></div>
+      <div class="field node"><label>NODE</label><input id="node" placeholder="A0 / A1 / A12 ..."/></div>
+      <div class="field title"><label>TITLE</label><input id="title" placeholder="Diagram title"/></div>
+      <div class="field number">
+        <div class="sub">
+          <label>C-NUMBER</label><input id="cnum" />
+        </div>
+        <div class="sub">
+          <label>PAGE</label><input id="page" />
+        </div>
       </div>
-      <div class="sub">
-        <label>Page</label><input id="page" />
-      </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- Floating mini palette for labels -->
-  <div class="label-editor" id="labelEditor">
-    <input id="labelInput" />
-    <div class="label-row">
-      <select id="entityList"></select>
-      <button id="btnLabelApply">Apply</button>
+    <!-- Floating mini palette for labels -->
+    <div class="label-editor" id="labelEditor">
+      <input id="labelInput" />
+      <div class="label-row">
+        <select id="entityList"></select>
+        <button id="btnLabelApply">Apply</button>
+      </div>
     </div>
   </div>
 
